Ported the new dynamic-sizing code to the secondary ability display as well.

--- a/data/objects/gui-components/hud-components/ability_secondary_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_secondary_display.cfg
@@ -46,8 +46,20 @@
 
 
 #-------------------------- core behavior --------------------------#
-		graphic_cells: "[custom_obj] ::
+		max_graphic_cells: "[custom_obj] ::
 							[graphic_pre2, graphic_pre1, graphic, graphic_post1, graphic_post2]",
+
+		
+		graphic_cells: "[custom_obj] :: max_graphic_cells[
+			/*
+				A little bit of black magic here, to start us deeper into the list so we get i.e. [graphic_pre1, graphic, graphic_post1] rather than [graphic_pre2, graphic_pre1, graphic].  Essentially we need it centered so that `graphic` is guaranteed to be in the set, somewhere.  The object represented by `graphic` specifically represents the current ability/powerup.
+			*/
+			start_val
+			:
+			start_val + min( size(player.ability_list), 5 )
+		] where start_val = max(0,
+			lib.math.floor( (5 - size(player.ability_list)) / 2.0 )
+		)",
 
 		set_to_animation: "def( custom_obj target, [int,int,int,int] rect) -> commands
 			set(target.animation, {
@@ -76,7 +88,7 @@
 							replace_existing: true,
 							on_complete: anim2
 					}) where anim2 = animate(value, {
-							alpha: if(index = 2, 255, 0),
+							alpha: if(index = index(graphic_cells, graphic), 255, 0),
 							mid_x: mid_x ,
 							mid_y: mid_y ,
 						},{
@@ -103,12 +115,19 @@
 			set(overlay.relative_x, 0),
 			set(overlay.relative_y, 0),
 			set(me.alpha, 0),
+		]",
+
+		destructor: "[
+			map(max_graphic_cells, remove_object(value)),
+			remove_object(overlay),
 		]"
 	},
 	
 	on_start_level: "constructor", //When we enter a new level, the frogatto object retains the reference to ability_display object. Frogatto takes care of adding this object to the level. However, this object must add any objects it added previously. Since the object is only created once, on_create only ever fires once. Since the first level is not entered when this object is around, on_start_level only fires every time after the first level we enter.
 	
 	on_create: "constructor",
+	on_being_added: "constructor",
+	on_being_removed: "destructor",
 	
 	//Sync UI state with Frogatto.
 	on_process: "
@@ -126,10 +145,16 @@
 			]
 				where has_enough_mana = player.current_mana_availability
 				where item_info = (def(int offset) -> class inventory_item
-					(if(normalized_index = 0, 
+				(
+					if(normalized_index = 0, 
 						player.item_info(player.current_secondary_item),
 						player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, enum secondary_item) )
-					)) where normalized_index = offset - 2 )
+					)
+					/*
+						There's a little bit of 'special logic' here in the where clause - this is intended to take our offset (i.e. which of the 5 graphical cells we could be looking at), and change the values from `[0, 1, 2, 3, 4]`, to being `[-2, -1, 0, 1, 2]`.  0 is meant to specially represent the -current- ability the player has selected.
+					*/
+				) where normalized_index = offset - index(graphic_cells, graphic)
+			)
 		)
 	",
 	
@@ -161,6 +186,7 @@
 			},
 
 			on_create: "add_object(frame)",
+			on_being_added: "add_object(frame)",
 			on_being_removed: "remove_object(frame)",
 		},
 
