--- a/data/objects/props-interactive/obstacles/fan_vertical.cfg
+++ b/data/objects/props-interactive/obstacles/fan_vertical.cfg
@@ -8,7 +8,12 @@ prototype: ["triggerable"],
 properties: {
 
 #-------------------------- effects attaches --------------------------#
-	sfx: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'ambient/fan.ogg', starts_with_sound_on: false})" },
+	sfx: {
+		type: "obj sound_source_individual_attache",
+		init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'ambient/fan.ogg', starts_with_sound_on: false})",
+		persistent: false,
+		variable_name: 'sfx',
+	},
 
 	air_particles: {
 		type: "obj legacy_particle_attache",
