--- a/data/level/Seaside/to-nenes-house.cfg
+++ b/data/level/Seaside/to-nenes-house.cfg
@@ -236,7 +236,15 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "berd_dialogue",
-			"on_triggered": "[level.player.scripted_move_to_x(3150, 1, def() -> commands [fire_event(get_object_or_die(level,'berd_man'), 'special_conversation')]),die()] asserting level.player is obj frogatto_playable",
+			"on_triggered": "if(level.player.get_stored_event('berds_first_speech') = 1,
+				remove_object(me),
+				[
+					level.player.scripted_move_to_x(3150, 1, def() -> commands [
+						fire_event(get_object_or_die(level,'berd_man'), 'special_conversation')
+					]),
+					die()
+				]
+			) asserting level.player is obj frogatto_playable",
 			"property_data": {
 				"_x2_bound": 3404,
 				"_x_bound": 2972,
