Made a quick educational level to make a lot of hauling-key mechanics obvious to the player.

--- a/data/level/Forest/foreboding-forest.cfg
+++ b/data/level/Forest/foreboding-forest.cfg
@@ -312,7 +312,7 @@
 			"label": "left_exit",
 			"property_data": {
 				"_dest_door": "right_exit",
-				"_dest_level": "wandering-passage.cfg"
+				"_dest_level": "rusted-gateway.cfg"
 			},
 			"type": "forest_cave_side_doorway",
 			"x": -1600,
