--- a/data/level/Seaside/wandering-passage.cfg
+++ b/data/level/Seaside/wandering-passage.cfg
@@ -142,7 +142,7 @@
 			"label": "right_exit",
 			"property_data": {
 				"_dest_door": "left_exit",
-				"_dest_level": "foreboding-forest.cfg"
+				"_dest_level": "rusted-gateway.cfg"
 			},
 			"type": "cave_side_doorway_interior",
 			"x": 5696,
