Fixed up that one conversation with Harstersham so that the three branches of it actually work.

--- a/data/level/Forest/tempo-village.cfg
+++ b/data/level/Forest/tempo-village.cfg
@@ -2280,41 +2280,79 @@
 			"label": "_16ebf244",
 			"on_talk": "speech_dialog(
 				self,			[~Good morning.~],
+								set(level.player.animation, 'emote_confused'),
 				frogatto,		[~Um… hello there.~],
 				self,			[~Is everything all right?~],
+								set(level.player.animation, 'emote_confused'),
 				frogatto,		[~What? Yeah. I'm… fine.~],
-				self,			[~You look like you’ve seen a ghost.~],
+				self,			[~You look like you’ve seen a … <em>ghost</em>.~],
 			
-					/* If Frogatto was polite to Truggle */
-				frogatto,		[~Well, I'll be honest with you.~],
-								[~I made some judgments based on your appearance.~],
-								[~And then, when it turned out I was wrong,\\nI didn’t know how to react.~],
-				self,			[~…\nThis happens to me all the time.~],
-				frogatto,		[~That must be frustrating.~],
-				self,			[~It is. But I’m glad you gave me a chance.~],
-								[~Most people just keep their distance from me.~],
-				frogatto,		[~I'm sorry to hear that.~],
-								[~I'll be more careful not to assume\\nthings about people in the future.~],
-				self,			[~Thank you. Take care.~],
-
-					/* If Frogatto argued with Truggle */
-				frogatto,		[~Well, I imagine if I ever saw a ghost,\\nit would look like you.~],
-				self,			[~Wow. I can't believe I'm hearing this.~],
-				frogatto,		[~Oh, come on. This can't be the first time.~],
-								[~Have you never looked in the mirror?~],
-				self,			[~That's not why I'm surprised.~],
-								[~I heard what you said to Truggle over there.~],
-								[~You were in such a rush to\\ncall him out on his bigotry.~],
-								[~But I guess it's okay when <em>you</em> make\\nsnap judgments based on appearances.~],
-								[~And at least Truggle was correct!\\nYour reaction doesn't even make sense.~],
-								[~Why would a ghost be hanging out in\\na village in the middle of the day?~],
-								[~WEARING A SCARF?~],
-				frogatto,		[~You're right,\\nthat would be completely ridiculous.~],
-								[~I'm sorry.\\nI let my emotions take over and didn't think.~],
-				self,			[~It's okay.\\nJust be a little more sensitive in the future.~],
-				frogatto,		[~I will. Take care.~],
-
-					) where frogatto = level.player",
+				if(level.player.get_stored_event('truggle_confrontational') = 1, /* If Frogatto argued with Truggle */
+					[
+										set(level.player.animation, 'emote_geez'),
+						frogatto,		[~Well, I imagine if I ever saw a ghost,\\nit would look like you.~],
+						self,			[~Wow. I can't believe I'm hearing this.~],
+										set(level.player.animation, 'emote_impatient'),
+						frogatto,		[~Oh, come on. This can't be the first time.~],
+										set(level.player.animation, 'emote_geez'),
+										[~Have you never looked in the mirror?~],
+						self,			[~That's not why I'm surprised.~],
+										[~I heard what you said to Truggle over there.~],
+										[~You were in such a rush to\\ncall him out on his bigotry.~],
+										[~But I guess it's okay when <em>you</em> make\\nsnap judgments based on appearances.~],
+										[~And at least Truggle was correct!\\nYour reaction doesn't even make sense.~],
+										[~Why would a ghost be hanging out in\\na village in the middle of the day?~],
+										[~WEARING A SCARF?~],
+										set(level.player.animation, 'emote_geez'),
+						frogatto,		[~You're right,\\nthat would be completely ridiculous.~],
+										set(level.player.animation, 'emote_confused'),
+										[~I'm sorry.\\nI let my emotions take over and didn't think.~],
+						self,			[~It's okay.\\nJust be a little more sensitive in the future.~],
+										set(level.player.animation, 'emote_nod'),
+						frogatto,		[~I will. Take care.~],					
+					],			
+					if(level.player.get_stored_event('truggle_polite') = 1, /* If Frogatto was polite to Truggle */
+						[
+											set(level.player.animation, 'emote_geez'),
+							frogatto,		[~Well, I'll be honest with you.~],
+											set(level.player.animation, 'emote_raisedfinger'),
+											[~I made some judgments based on your appearance.~],
+											set(level.player.animation, 'emote_confused'),
+											[~And then, when it turned out I was wrong,\\nI didn’t know how to react.~],
+							self,			[~…\nThis happens to me all the time.~],
+											set(level.player.animation, 'emote_geez'),
+							frogatto,		[~That must be frustrating.~],
+							self,			[~It is. But I’m glad you gave me a chance.~],
+											[~Most people just keep their distance from me.~],
+											set(level.player.animation, 'emote_confused'),
+							frogatto,		[~I'm sorry to hear that.~],
+											set(level.player.animation, 'emote_nod'),
+											[~I'll be more careful not to assume\\nthings about people in the future.~],
+							self,			[~Thank you. Take care.~],
+						],
+						[ /* If Frogatto didn't even talk to Truggle */
+											set(level.player.animation, 'emote_oh'),
+							frogatto,		[~What's in a ghost?  That which we call a ghost,\\nby any other name, would still be a bag.~],
+							self,			[~A… <em>bag</em>?~],
+											set(level.player.animation, 'emote_raisedfinger'),
+							frogatto,		[~An upside-down bedsheet, filled with <em>spooky</em>.~],
+							self,			[~I'm sorry, what now?~],
+											set(level.player.animation, 'emote_geez'),
+							frogatto,		[~'Tis by thy aspect, that thou be ghostly.\\nWere they to ask me, I doth say, 'Mostly.'~],
+							self,			[~…~],
+											set(level.player.animation, 'emote_raisedfinger'),
+							frogatto,		[~Got your attention, didn't I?~],
+							self,			[~Do you do, like … <em>theater</em>?~],
+											set(level.player.animation, 'emote_confused'),
+							frogatto,		[~No, but I think it would be a blast.  Probably.\\nHow about you?~],
+							self,			[~I kinda wish I did.\\nIt'd be fun!~],
+											set(level.player.animation, 'emote_nod'),
+							frogatto,		[~Well, hey, if I'm ever running through here again,\\nand not on pressing business, hit me up.~],
+							self,			[~Yeah.~],
+						]
+					)
+				)
+			) where frogatto = level.player",
 			"type": "harstersham_npc",
 			"x": 576,
 			"y": 256
