--- a/data/level/Forest/rocky-road-house-inside.cfg
+++ b/data/level/Forest/rocky-road-house-inside.cfg
@@ -8,36 +8,102 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_e0bb885",
-			"on_talk": "speech_dialog(self, [~Hello there.~],
+			"on_talk": "speech_dialog(self, [~Hello there.~,
 
+				~You look magical.~, [speech_dialog(
+
+										set(level.player.animation, 'emote_oh'),
 						   frogatto,	[~Wow. You look magical.~],
 						   self,		[~Uh… thanks?~],
+										set(level.player.animation, 'emote_raisedfinger'),
 						   frogatto,	[~If I catch you, do you have to grant me a wish?~],
 						   self,		[~Did that seriously just fall out of your mouth?~],
+										set(level.player.animation, 'emote_oh'),
 						   frogatto,	[~Sorry, I was just-~],
 						   self,		[~No, no, let's really explore this here.~],
 						   				[~So you think that I get bound to\\nanyone who walks up and grabs me…~],
+										set(frogatto.animation, 'emote_confused'),
 						   frogatto,	[~…yes…~],
 						   self,		[~…and I just live in this village here?\\nWith a few dozen neighbors?~],
+										set(level.player.animation, 'emote_nod'),
 						   frogatto,	[~Sure, why not?~],
 						   self,		[~Neighbors who would never stop trying to catch me?~],
+										set(frogatto.animation, 'emote_talk'),
 						   frogatto,	[~I dunno. Maybe you're really fast?~],
 						   self,		[~Fast, and tired from always\\nneeding to look over my shoulder?~],
 						   				[~Lest I get manhandled\\nby every boob who comes walking by?~],
+										set(level.player.animation, 'emote_raisedfinger'),
 						   frogatto,	[~Or maybe there's a limit of one wish per person?~],
-						   self,		[~Okay. So you think everyone in town caught me once…~],
+						   self,		[~Okay.\\nSo you think everyone in town caught me once…~],
 						   				[~…and now I can relax because\\nthey have no reason to keep trying?~],
+										set(level.player.animation, 'emote_nod'),
 						   frogatto,	[~Seems plausible.~],
 						   self,		[~Have you seen some of\\nthe goobers that live in this area?~],
 						   self,		[~Did you catch that guy\\nwith the sweet new motorcycle?~],
+										set(frogatto.animation, 'emote_confused'),
 						   frogatto,	[~No…~],
 						   self,		[~Have you seen the gal\\nwith the collection of long-lost art?~],
+										set(frogatto.animation, 'emote_geez'),
 						   frogatto,	[~I have not.~],
 						   self,		[~Did Truggle tell you about their business venture\\nthat's taken the world by storm?~],
+										set(frogatto.animation, 'emote_confused'),
 						   frogatto,	[~Not as of yet.~],
 						   self,		[~Huh. It's almost as if they've\\nnever been granted any wishes before.~],
+										set(frogatto.animation, 'emote_impatient'),
 						   frogatto,	[~Okay, okay. I'll see myself out.~],
-
+						)],
+				~Where am I?~, [speech_dialog(
+										set(level.player.animation, 'emote_geez'),
+						   frogatto,	[~I want to apologize for just <em>barging in</em>,\\nbut, uh ...~],
+										set(level.player.animation, 'emote_confused'),
+						   				[~Where on earth AM I, right now?~],
+						   self,		[~Total stranger to the area?~],
+										set(level.player.animation, 'emote_oh'),
+						   frogatto,	[~Yeah.~],
+						   self,		[~Well, well, then.~],
+						   				[~Welcome to Tempo Village.\\nEr, well, we're not <em>quite</em> in town, here…~],
+						   				[~…\"Outlying Area\", perhaps.\\nBut that's the town.~],
+										set(frogatto.animation, 'emote_confused'),
+						   frogatto,	[~Cool.~],
+						   self,		[~I'm rather fond of it myself.\\nCozy little place nestled into the woods here.~],
+						   				[~Good food.  Better people.\\nYou'll see more of it to the east.~],
+										set(level.player.animation, 'emote_nod'),
+						   frogatto,	[~Nice.~],
+						   self,		[~You, though?  You wouldn't happen to be from\\nCrevice Village, would you?~],
+										set(frogatto.animation, 'emote_talk'),
+						   frogatto,	[~I am.~],
+						   self,		[~Oh my, we haven't have folks from that area in\\nquite a while.~],
+						   				[~A real pity too,\\nthere are some nice folks in that town.~],
+										set(level.player.animation, 'emote_raisedfinger'),
+						   frogatto,	[~I have a notion the guy running the gate\\n<em>might</em> have something to do with it.~],
+										set(level.player.animation, 'emote_geez'),
+						   				[~Kind of an old kook who might\\nbe asleep at the wheel.~],
+										set(frogatto.animation, 'emote_confused'),
+						   				[~The tunnel into the forest was locked,\\nand looked abandoned.~],
+						   self,		[~Well, now that's an interesting story.~],
+						   				[~It seems to check out with some rumors\\nI heard a while back.~],
+						   				[~Some folks tried to take the tunnel\\nhad to ring the bell, and knock on the gate.~],
+						   				[~Finally just had to give up.\\nNo one was answering.~],
+										set(level.player.animation, 'emote_geez'),
+						   frogatto,	[~And I'm guessing from what I know -\\nI don't know of any other way around, do you?~],
+						   self,		[~Nope.~],
+										set(level.player.animation, 'emote_impatient'),
+						   frogatto,	[~Wow.\\nI had no idea that guy was that much of a doof.~],
+										set(frogatto.animation, 'emote_geez'),
+						   				[~I mean, I <em>did</em>, but …\\n'benefit of the doubt', you know?~],
+										set(frogatto.animation, 'emote_confused'),
+						   				[~He got that job to keep him out of trouble,\\nbut I guess he's gone and made some, huh?~],
+						   self,		[~So it would seem, so it would seem.~],
+						   				[~At any rate, it's a pleasure to meet you.\\nI hope to see you around.~],
+										set(frogatto.animation, 'emote_nod'),
+						   frogatto,	[~All the best.~],
+						   self,		[~Oh! By the way, do say hello to the\\nfellow who lives near the river.~],
+						   				[~\"Cubeaver\".\\nHe could always use a visitor.~],
+										set(frogatto.animation, 'emote_raisedfinger'),
+						   frogatto,	[~Don't mind if I do!.~],
+						)]						
+						
+				]
 			) where frogatto = level.player",
 			"type": "ringlark_npc",
 			"x": -256,
