Gave hurst a conversation.

--- a/data/level/Forest/tempo-village-house-store.cfg
+++ b/data/level/Forest/tempo-village-house-store.cfg
@@ -117,6 +117,26 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_4cc2003",
+			"on_talk": "if(had_conversation_with_me_already__section('introduced_store'),
+	           [  speech_dialog(
+	           		self,			[~Don't be in a hurry to buy anything.~],
+	           						[~I'm not in a rush to chase anyone out of here!~]
+	           ) ],
+	
+	           [ speech_dialog(		
+									set(level.player.animation, 'emote_confused'),
+					level.player,	[~Hey there, big fella?~],
+					self, 			[~Hello!  Welcome to the store!~],
+									[~My name's Hurst; pleased to meet ya.~],
+									set(level.player.animation, 'emote_talk'),
+					level.player,	[~Same to you.\\nNice shop!~],	
+					self,			[~Yep, we've got this, that, and possibly even\\nthe other.  All sorts of stuff!~],
+									[~Fishing gear for those kind of folks.\\nRope and tackle, odds and ends.~],
+									[~If you're looking for something and don't see it\\ngimme a holler and I'll see what I can do.~],
+									set(level.player.animation, 'emote_nod'),
+					level.player,	[~Absolutely!~],	
+									record_having_conversation__section('introduced_store')
+			   )])",
 			"type": "hurst_npc",
 			"x": 1290,
 			"y": 151
