--- a/data/objects/props-interactive/npcs/ringlark_npc.cfg
+++ b/data/objects/props-interactive/npcs/ringlark_npc.cfg
@@ -3,6 +3,8 @@ id: "ringlark_npc",
 prototype: ["standing_npc"],
 solid_dimensions: ["npc"],
 solid_area: [16,16,47,65],
+
+on_end_talk_anim: "animation('stand')",
 animation: [
 	{
 		"@base": true,
@@ -20,7 +22,7 @@ animation: [
 	},
 	{
 		id: "talk",
-		rect: [2,164,63,322],
+		rect: [2,164,63,241],
 		duration: 7,
 		frames: 14,
 		frames_per_row: 7,
