Moved the homing shots to using a legacy particle attache so their fx are nicely and reliably centered on the shot graphics.

--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -209,19 +209,19 @@ properties: {
 							enum arcane_mote,				[
 																spawn('bouncing_debris_chunk.electric_sparks', x, y, {parent: me, relative_x:0, relative_y:0, time_to_die: 0}),
 																schedule(100 + 1d100, do_settle),
-																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_mote_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
 															],
 															
 							enum arcane_shard_small1,		[
-																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_mote_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
 																set(alpha, 100),
 															],
 							enum arcane_shard_small2,		[
-																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_mote_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
 																set(alpha, 100),
 															],
 							enum arcane_shard_big1,			[
-																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+																spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'arcane_mote_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
 																set(alpha, 100),
 															],
 															null
