--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -133,7 +133,8 @@ properties: {
 		'prospera_spell_aftermath': ['prospera_spell_aftermath'],
 		'fuse_sparks': ['fuse_sparks'],
 		'energy_shot_contrail': ['blue_energy_motes_small', 'electric_sparks'],
-		'arcane_shot_contrail': ['arcane_motes_small'],
+		'arcane_mote_contrail': ['arcane_motes_small'],
+		'arcane_shot_contrail': ['arcane_contrail'],
 		'acid_shot_contrail': ['acid_motes_small'],
 		'smoky_fire_shot_contrail': ['2_fire_med', '0_fire_smoke'],
 	}",
@@ -974,6 +975,32 @@ particle_system: [
 			scale: 1,
 		}],
 	},
+	{
+		id: "arcane_contrail",
+		type: "simple",
+		min_y: -6,
+		max_y: 6,
+		min_x: -6,
+		max_x: 6,
+		spawn_rate: 1000,
+		time_to_live: 24,
+		velocity_magnitude: 1000,
+		velocity_magnitude_random: 100,
+		velocity_rotate_random: 360,
+		animation: {
+			id: "sparkle",
+			image: "effects/particles2.png",
+			x: 1,
+			y: 227,
+			w: 7,
+			h: 7,
+			pad: 3,
+			frames: 8,
+			frames_per_row:4,
+			scale: 2,
+			duration: 3,
+		},
+	},	
 	{
 		id: "electric_sparks",
 		type: "simple",
