--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -4695,18 +4695,28 @@ object_type: [
 					spawn('frogatto_playable.homingshot_bloom', mid_x, mid_y, 0),
 					lib.sound.play_sound(me, 'homingimpact'), 
 				]",
+		
+		
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'arcane_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'my_particles',
+					zsub_order: -1,
+				})",
+				persistent: false,
+			},
+		
+			epihittable_obj_constructor: "[
+				set(time_in_animation, 1d6),
+				spawn('frogatto_playable.homingshot_bloom',midpoint_x,midpoint_y,0), 
+				add_object(my_particles),
+			]",
+		
 		},
-		
-		on_create: "[
-			set(time_in_animation, 1d6),
-			spawn('frogatto_playable.homingshot_bloom',midpoint_x,midpoint_y,0), 
-			spawn('frogatto_playable.homingshot_particles', mid_x, mid_y, {facing: facing, parent: me, relative_x: 0, relative_y: 0, time_to_die: 50, initial_spawn_rate: 1000 }),
-		]",
-		
-		// When we die we want to keep the particles coming. So, we turn into a particle_system_holder object and set our hitpoints to the number of cycles we want to keep the particles running for. We schedule turning into the particle system holder next frame, because we want to remain as we are this frame so any remaining collisions can be properly resolved.
-		
-
-					
+				
 	
 		on_end_anim: "[animation('normal')]",
 		
@@ -4750,23 +4760,45 @@ object_type: [
 
 	{
 		id: "homingshot_impact",
+		prototype: ["transient_object"],
 		dies_on_inactive: true,
 		ignore_collide: true,
 		zorder: "@include data/zorder.cfg:near_player_foreground_effects",
 		zsub_order: -10,
+
+
+		properties: {
+			#-------------------------- constructor/destructor --------------------------#
+		/*
+			We want to spawn a bunch of particles at the start, and then stop, so we schedule an event to stop spawning immediately after we are created.
+		*/
+
+		transient_object_constructor: "[
+			add_object(my_particles), 
+			schedule(3, my_particles.turn_off),
+		]",
+
+
+			#-------------------------- fx --------------------------#
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'arcane_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'my_particles',
+					zsub_order: -1,
+				})",
+				persistent: false,
+			},
+		
+		},
 
 		on_end_anim: "[
 			animation('invis'),
 			schedule(30, die()), 
 		]",
 
-		//we want to spawn a bunch of particles at the start, and then stop, so we schedule an event to stop spawning immediately after we are created.
-		on_create: "[
-			add_particles('particles'), 
-			schedule(3, fire_event('stop_spawning_particles')),
-		]",
-		
-		on_stop_spawning_particles: "set(particle_systems['particles'].spawn_rate, 0)",
 		
 		animation: [{
 			"@base": true,
@@ -4783,71 +4815,6 @@ object_type: [
 			id: "invis",
 			w: 0, h: 0,		
 		}],
-		
-		particle_system: {
-			id: "particles",
-			type: "simple",
-			min_y: 9,
-			max_y: 13,
-			spawn_rate: 1000,
-			time_to_live: 24,
-			velocity_magnitude: 1000,
-			velocity_magnitude_random: 100,
-			velocity_rotate_random: 360,
-			animation: {
-				id: "sparkle",
-				image: "effects/particles2.png",
-				x: 1,
-				y: 227,
-				w: 7,
-				h: 7,
-				pad: 3,
-				frames: 8,
-				frames_per_row:4,
-				scale: 2,
-				duration: 3,
-			},
-		},
-	},
-	
-	{
-		id: "homingshot_particles",
-		prototype: ["effects_attache"],
-
-		properties: {
-			initial_spawn_rate: { type: "int", dynamic_initialization: true },
-
-			do_setup: "add_particles('particles')",
-			turn_on: "set(particle_systems['particles'].spawn_rate, initial_spawn_rate)",
-			turn_off: "set(particle_systems['particles'].spawn_rate, 0)",
-		},
-
-		particle_system: {  /* min/max values are offset by the w/h values of the graphics, since the graphical drawing position is naively centered on xy rather than mid_xy */
-			id: "particles",
-			type: "simple",
-			min_y: -13,
-			max_y: -2,
-			min_x: -13,
-			max_x: -2,
-			spawn_rate: 1000,
-			time_to_live: 24,
-			velocity_magnitude: 1000,
-			velocity_magnitude_random: 100,
-			velocity_rotate_random: 360,
-			animation: {
-				id: "sparkle",
-				image: "effects/particles2.png",
-				x: 1,
-				y: 227,
-				w: 7,
-				h: 7,
-				pad: 3,
-				frames: 8,
-				frames_per_row:4,
-				scale: 2,
-				duration: 3,
-			},
-		},
 	},
 	{
 		id: "homingshot",
@@ -4893,6 +4860,18 @@ object_type: [
 				persistent: false,
 			},
 
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'arcane_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'my_particles',
+					zsub_order: -1,
+				})",
+				persistent: false,
+			},
+
 
 			light_circular: {
 				type: "obj light_source_attache",
@@ -4911,12 +4890,12 @@ object_type: [
 		on_create: "[
 			add_object(_damage_beam),
 			add_object(light_circular),
+			add_object(my_particles),
 			set(time_in_animation, 1d6),
 			lib.sound.play_sound(me, 'homing'),
 			schedule(250,force_death()),
 			set(_target_lock, nearest_enemy),
 			spawn('frogatto_playable.homingshot_bloom',mid_x, mid_y,0), 
-			spawn('frogatto_playable.homingshot_particles', mid_x, mid_y, {facing: facing, parent: me, relative_x: 0, relative_y: 0, time_to_die: 50, initial_spawn_rate: 1000 }),
 		]",
 		
 		on_process: "[
