Partial work towards converting the energy shot over to a legacy particle attache.

--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -132,9 +132,10 @@ properties: {
 		'prospera_spell_contrail': ['prospera_spell_contrail'],
 		'prospera_spell_aftermath': ['prospera_spell_aftermath'],
 		'fuse_sparks': ['fuse_sparks'],
-		'energy_shot_contrail': ['blue_energy_motes_small', 'electric_sparks'],
+		'energy_mote_contrail': ['blue_energy_motes_small', 'electric_sparks'],
 		'arcane_mote_contrail': ['arcane_motes_small'],
-		'arcane_shot_contrail': ['arcane_contrail'],
+		'energy_shot_contrail': ['energy_shot_contrail'],
+		'arcane_shot_contrail': ['arcane_shot_contrail'],
 		'acid_shot_contrail': ['acid_motes_small'],
 		'smoky_fire_shot_contrail': ['2_fire_med', '0_fire_smoke'],
 	}",
@@ -976,7 +977,32 @@ particle_system: [
 		}],
 	},
 	{
-		id: "arcane_contrail",
+		id: "energy_shot_contrail",
+		type: "simple",
+		spawn_rate: 1000,
+		time_to_live: 20,
+		min_x: -5,
+		max_x: 5,
+		min_y: -5,
+		max_y: 5,
+		velocity_magnitude: 1000,
+		velocity_magnitude_random: 1000,
+		velocity_rotate_random: 360,
+		animation: {
+			id: "sparkle",
+			image: "effects/particles2.png",
+			x: 84,
+			y: 19,
+			w: 7,
+			h: 7,
+			pad: 3,
+			frames: 4,
+			scale: 2,
+			duration: 5,
+		},
+	},
+	{
+		id: "arcane_shot_contrail",
 		type: "simple",
 		min_y: -6,
 		max_y: 6,
