--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -4394,6 +4394,20 @@ object_type: [
 				persistent: false,
 			},
 
+
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'energy_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'my_particles',
+					zsub_order: -1,
+				})",
+				persistent: false,
+			},
+
+
 			light_circular: {
 				type: "obj light_source_attache",
 				init: "object('light_source_attache', mid_x, mid_y, {
@@ -4411,6 +4425,7 @@ object_type: [
 		on_create: "[
 			add_object(_damage_beam),
 			add_object(light_circular),
+			add_object(my_particles),
 			set(_damage_beam.beam_angle, incept_angle),
 			set(_damage_beam.relative_x, 0),
 			set(_damage_beam.relative_y, 0),
@@ -4418,7 +4433,6 @@ object_type: [
 			lib.sound.play_sound(me, 'energy-shot-medium'),
 			schedule(30, me.force_death() ),
 			spawn('frogatto_playable.energyshot_bloom',mid_x,mid_y,0),
-			spawn('frogatto_playable.energyshot_particles', mid_x, mid_y, {facing: facing, parent: me, relative_x: 0, relative_y: 0, time_to_die: 50, initial_spawn_rate: 1000 }),
 		]",
 	
 		on_process: "[
@@ -4445,23 +4459,54 @@ object_type: [
 	},
 	{
 		id: "energyshot_bloom",
+		prototype: ["transient_object"],
 		dies_on_inactive: true,
 		ignore_collide: true,
 		zorder: "@include data/zorder.cfg:near_player_foreground_effects",
 		zsub_order: -10,
 
+		properties: {
+			#-------------------------- constructor/destructor --------------------------#
+			/*
+				We want to spawn a bunch of particles at the start, and then stop, so we schedule an event to stop spawning immediately after we are created.
+			*/
+
+			transient_obj_constructor: "[
+				add_object(my_particles),
+				my_particles.turn_on,
+				;
+				schedule(3, bind_command(def() execute(me, my_particles.turn_off ))),
+			]",
+
+
+			#-------------------------- fx --------------------------#
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'energy_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'my_particles',
+					zsub_order: -1,
+
+
+					customized_spawn_rates: [{
+						particle_id: 'energy_shot_contrail',
+						magnitude: 100000,
+					}],
+
+				})",
+				persistent: false,
+			},
+		
+		},
+
+
 		on_end_anim: "[
 			animation('invis'),
 			schedule(30, die()), 
 		]",
-
-		//we want to spawn a bunch of particles at the start, and then stop, so we schedule an event to stop spawning immediately after we are created.
-		on_create: "[
-			add_particles('particles'), 
-			schedule(3, fire_event('stop_spawning_particles')),
-		]",
-		
-		on_stop_spawning_particles: "set(particle_systems['particles'].spawn_rate, 0)",
+	
 		
 		animation: [{
 			"@base": true,
@@ -4479,32 +4524,6 @@ object_type: [
 			id: "invis",
 			w: 0, h: 0,		
 		}],
-		
-		particle_system: {
-			id: "particles",
-			type: "simple",
-			spawn_rate: 10000,
-			time_to_live: 20,
-			min_x: 10,
-			max_x: 20,
-			min_y: 10,
-			max_y: 20,
-			velocity_magnitude: 1000,
-			velocity_magnitude_random: 1000,
-			velocity_rotate_random: 360,
-			animation: {
-				id: "sparkle",
-				image: "effects/particles2.png",
-				x: 84,
-				y: 19,
-				w: 7,
-				h: 7,
-				pad: 3,
-				frames: 4,
-				scale: 2,
-				duration: 5,
-			},
-		},
 	},
 	
 	{
@@ -4769,14 +4788,14 @@ object_type: [
 
 		properties: {
 			#-------------------------- constructor/destructor --------------------------#
-		/*
-			We want to spawn a bunch of particles at the start, and then stop, so we schedule an event to stop spawning immediately after we are created.
-		*/
+			/*
+				We want to spawn a bunch of particles at the start, and then stop, so we schedule an event to stop spawning immediately after we are created.
+			*/
 
-		transient_object_constructor: "[
-			add_object(my_particles), 
-			schedule(3, my_particles.turn_off),
-		]",
+			transient_obj_constructor: "[
+				add_object(my_particles), 
+				schedule(3, my_particles.turn_off),
+			]",
 
 
 			#-------------------------- fx --------------------------#
