Fixed some cosmetic issues with the energy shot particles.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -4472,7 +4472,9 @@ object_type: [
 			*/
 
 			transient_obj_constructor: "[
+				set(rotate, 1d360),
 				add_object(my_particles),
+				;
 				my_particles.turn_on,
 				;
 				schedule(3, bind_command(def() execute(me, my_particles.turn_off ))),
@@ -4492,7 +4494,7 @@ object_type: [
 
 					customized_spawn_rates: [{
 						particle_id: 'energy_shot_contrail',
-						magnitude: 100000,
+						magnitude: 10000,
 					}],
 
 				})",
