Converted the super energyshot over to using a legacy_particle_attache.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -4326,44 +4326,6 @@ object_type: [
 		},
 	},
 	{
-		id: "energyshot_particles",
-		prototype: ["effects_attache"],
-
-		properties: {
-			initial_spawn_rate: { type: "int", dynamic_initialization: true },
-
-			do_setup: "add_particles('particles')",
-			turn_on: "set(particle_systems['particles'].spawn_rate, initial_spawn_rate)",
-			turn_off: "set(particle_systems['particles'].spawn_rate, 0)",
-		},
-
-		particle_system: {  /* min/max values are offset by the w/h values of the graphics, since the graphical drawing position is naively centered on xy rather than mid_xy */
-			id: "particles",
-			type: "simple",
-			min_y: -13,
-			max_y: -2,
-			min_x: -13,
-			max_x: -2,
-			spawn_rate: 1000,
-			time_to_live: 20,
-			velocity_magnitude: 1000,
-			velocity_magnitude_random: 100,
-			velocity_rotate_random: 360,
-			animation: {
-				id: "sparkle",
-				image: "effects/particles2.png",
-				x: 84,
-				y: 19,
-				w: 7,
-				h: 7,
-				pad: 3,
-				frames: 4,
-				scale: 2,
-				duration: 5,
-			},
-		},	
-	},
-	{
 		id: "energyshot",
 		//dies_on_inactive: true,
 		prototype: ["shot"],
@@ -4557,18 +4519,37 @@ object_type: [
 				})",
 				persistent: false,
 			},
+
+			my_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'energy_shot_contrail',
+					parent: me,
+					time_to_die: 50,
+					variable_name: 'my_particles',
+					zsub_order: -1,
+
+
+					customized_spawn_rects: [{
+						particle_id: 'energy_shot_contrail',
+						rect: [-16, 16, -18, 18],
+					}],
+
+				})",
+				persistent: false,
+			},
 		},
 		
 		
 		on_create: "[
 			level.player.screen_shake( if(facing = 1,180,0), 200 ,5-1d10, 25, 2.5),
 			add_object(light_circular),
+			add_object(my_particles),
 		
 			set(animation, 'init'),
 			lib.sound.play_sound(me, 'energy-shot-uber'),
 			lib.sound.play_sound(me, 'energy-uber-fizzle'),
 			schedule(80,animation('dissipate')),
-			add_particles('particles'),
 		]",
 	
 		on_process: "[
@@ -4621,31 +4602,6 @@ object_type: [
 			feet_y: 16,
 		},
 		],
-		particle_system: {
-			id: "particles",
-			type: "simple",
-			min_x: 68,
-			max_x: 100,
-			min_y: 0,
-			max_y: 36,
-			spawn_rate: 1000,
-			time_to_live: 20,
-			velocity_magnitude: 1000,
-			velocity_magnitude_random: 100,
-			velocity_rotate_random: 360,
-			animation: {
-				id: "sparkle",
-				image: "effects/particles2.png",
-				x: 84,
-				y: 19,
-				w: 7,
-				h: 7,
-				pad: 3,
-				frames: 4,
-				scale: 2,
-				duration: 5,
-			},
-		},
 	},
 
 	
