Fixed a basement level not having a deadly-pit particle system on what is, in fact, a deadly pit.

--- a/data/objects/effects/particles/boxed_environmental_particle_generator.cfg
+++ b/data/objects/effects/particles/boxed_environmental_particle_generator.cfg
@@ -14,7 +14,11 @@ editor_info: {
 
 properties: {
 	
-	my_particles: { type: "obj particle_attache", init: "object('particle_attache',x,y, {_particle_type:'dust_drift', relative_y: 20, parent: me, time_to_die: 60})" },
+	my_particles: {
+		type: "obj particle_attache",
+		init: "object('particle_attache',x,y, {_particle_type:'dust_drift', relative_y: 20, parent: me, time_to_die: 60})",
+		persistent: false,
+	},
 
 
 	_x_bound: { type: "int", editor_info: { type: "x", value: "x-100" } },
