Balanced the set of save points on the mine levels, and added lighting to the first two.  Also swapped the unused teleporter in a secret area for a treasure chest with a partial heart.

--- a/data/level/Forest/musty-mine.cfg
+++ b/data/level/Forest/musty-mine.cfg
@@ -1981,16 +1981,46 @@
 			"custom": true,
 			"label": "_7bf120c9",
 			"property_data": {
-				"shadow_opacity": 0.7,
 				"shadow_color": {
-					"r": 0.027451,
+					"b": 0.090196,
 					"g": 0.0,
-					"b": 0.090196
-				}
+					"r": 0.027451
+				},
+				"shadow_opacity": 0.7
 			},
 			"type": "shadow_effect_controller",
 			"x": 437,
 			"y": 245
+		},
+		{
+			"_uuid": "483be330241f42b68ab452eea9b05295",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_130663c",
+			"property_data": {
+				"_x2_bound": 1262,
+				"_x_bound": 1162,
+				"_y2_bound": 1905,
+				"_y_bound": 1605
+			},
+			"type": "save_statue",
+			"x": 1182,
+			"y": 1775
+		},
+		{
+			"_uuid": "7ed1ffd8871e413ca7fbf00abcbd9b97",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_66f1c427",
+			"property_data": {
+				"_x2_bound": 2848,
+				"_x_bound": 2768,
+				"_y2_bound": 677,
+				"_y_bound": 192
+			},
+			"type": "save_statue",
+			"x": 2774,
+			"y": 547
 		}
 	],
 	"dimensions": [-2144,-224,6207,3071],
