Some work towards better cheat codes.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -296,10 +296,52 @@ properties: {
 
 
 	/*
-		In the spirit of early cheat codes, this is meant to make testing later levels more balanced against how powerful the player would normally be on such a level; it immediately empowers the player as though the player has purchased a bunch of late game upgrades.  This way we don't fall into making the levels easy enough to pass on a mere 2 hearts.
+		In the spirit of early cheat codes, these codes are meant to make testing later levels more balanced against how powerful the player would normally be on such a level; they immediately empower the player as though the player has played that far into the game, and has gotten all of the appropriate upgrades for that point in the game.  This way we don't fall into making the levels easy enough to pass on a mere 2 hearts.  We also try to set major event flags, so that if i.e. you enter a cheat code for a certain boss fight (like beating the gazer boss), it also flags the associated NPC conversations so you're on a quick path to test that.
 		
-		Note that the way to enter this code is to type ctrl+d to bring up the debug prompt, type "hax", press return to execute the code, and then press escape to turn off the debug prompt.
+		Note that the way to enter such a code is to type ctrl+d to bring up the debug prompt, type (e.g.) "hax", press return to execute the code, and then press escape to turn off the debug prompt.
+		
+		We have a whole family of these for various points in the game.  Note that subsequent commands usually "re-run" earlier commands, so we don't have to copy-paste tons of event flags.
 	*/
+
+	hax_mtm: "[  /* being past Mortimer's house */
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 3),
+		;set_item_amount(enum item_fire_breath_talisman, 1),
+		
+		store_event('stonepipe_bridge_fight_won',1),
+		store_event('berds_post_airplane_boss_speech',1),
+	]",
+
+	hax_elder: "[  /* just beat the elder's house fight */
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 4), //unlike `hax_tempo`, we're assuming you haven't hunted around and bought extra hearts.
+		;add_item(enum item_fire_breath_talisman, 1),
+	]",
+	
+	hax_tempo: "[  /* being at tempo village */
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 5), //we assume you've gotten the hearts from the airplane boss, from ralph, and also probably found or bought one extra one.
+		;add_item(enum item_fire_breath_talisman, 1),
+	]",
+
+	
+	hax_gazer: "[ /* having beaten the gazer boss. */
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 4),
+		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_energy_shot_talisman, 1),
+	]",
+	
+	hax_moth: "[ /* having beaten the moth boss. */
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 4),
+		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_energy_shot_talisman, 1),
+		;add_item(enum item_homing_shot_talisman, 1),
+	]",
+
+
+
 	hax: "[
 		map(range(size(ability_list_full)), schedule(value,fire_event('hax'))),
 		;set_item_amount(enum item_tongue_extension, 2),
@@ -316,24 +358,6 @@ properties: {
 		map(ability_list_full, set_item_amount(value,1)),
 		map(super_ability_list_full, set_item_amount(value,1)),
 		]",	
-	hax_mtm: "[  /* gives you progression similar to being past Mortimer's house */
-		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_heart_container, 3),
-		;add_item(enum item_fire_breath_talisman, 1),
-	]",
-	hax_gazer: "[ /* progression similar to having beaten the gazer boss. */
-		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_heart_container, 4),
-		;add_item(enum item_fire_breath_talisman, 1),
-		;add_item(enum item_energy_shot_talisman, 1),
-	]",
-	hax_moth: "[ /* progression similar to having beaten the moth boss. */
-		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_heart_container, 4),
-		;add_item(enum item_fire_breath_talisman, 1),
-		;add_item(enum item_energy_shot_talisman, 1),
-		;add_item(enum item_homing_shot_talisman, 1),
-	]",
 
 	
 	choppa: "set(_jump_cheat,true)",
